results and compare data filter with region, added orderby subject

--- a/templates/result.html
+++ b/templates/result.html
@@ -111,7 +111,7 @@
             <div class="d-flex align-items-center justify-space-between gap-3 p-3 w-100">
                 {% if examYear and examQuarter %}
                     <div class="col-md-6">
-                        <h2 class="h-auto">{% if territory %}{{ territory }} {%else%} Barcha hudular {% endif %} {{ school }} ko'rsatkichlari</h2>
+                        <h2 class="h-auto">{% if territory %}{{ territory }} {%else%} Barcha hudular {% endif %} {% if region %}{{ region }}{% else %}Barcha tumanlar{% endif %} {% if school %}{{ school }}{% else %}Barcha maktablar{% endif %} ko'rsatkichlari</h2>
                     </div>
                     <div class="col-md-6">
                         <button id="year-btn" type="button" class="btn h-auto btn-outline-primary mt-0 mr-3">
