--- a/templates/school.html
+++ b/templates/school.html
@@ -65,6 +65,13 @@
                                     <option value="{{ key }}" {% if val == studyClass %}selected="selected"{% endif %}>{{ val }}</option>
                                 {% endfor %}
                             </select>
+                            <label for="subject">Fan:</label>
+                            <select id="subject" name="subject" class="form-control select2" style="width: 100%;">
+                                {% for val, key in all_subjects.items() %}
+                                <option value="{{ val }}" {% if val==subject %}selected="selected" {% endif %}>{{
+                                    key }}</option>
+                                {% endfor %}
+                            </select>
 
                         <button type="submit" class="btn btn-primary" style="margin-top: 15px;">Saralash</button>
                     </div>
@@ -331,6 +338,7 @@
           territory = document.getElementById("territory").value;
           region = document.getElementById("region").value;
           studyClass = document.getElementById("studyClass").value;
+          subject = document.getElementById("subject").value;
 
           formData.append("page", page);
           formData.append("examYear", examYear);
@@ -338,6 +346,7 @@
           formData.append("territory", territory);
           formData.append("region", region);
           formData.append("studyClass", studyClass);
+          formData.append("subject", subject);
   
           // Send request to the API
         fetch(schools_api, {
@@ -351,7 +360,6 @@
             return response.text(); // Get the HTML response
           })
           .then((html) => {
-            console.log("Received HTML from API:", html);
 
             // Parse the returned HTML
             const parser = new DOMParser();
@@ -363,7 +371,6 @@
 
             if (newTable && currentTable) {
               currentTable.innerHTML = newTable.innerHTML;
-              console.log("Table updated successfully.");
             } else {
               console.error("Table not found in the response.");
             }
@@ -372,7 +379,6 @@
             const newPagination = doc.querySelector("#pagination");
             if (newPagination) {
               pagination.innerHTML = newPagination.innerHTML;
-              console.log("Pagination updated successfully.");
             } else {
               console.error("Pagination not found in the response.");
             }
